--- a/app/src/main/res/layout/adapter_list.xml
+++ b/app/src/main/res/layout/adapter_list.xml
@@ -4,21 +4,41 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/text_item"
-        android:layout_width="0dp"
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Item"
-        android:layout_gravity="top"
-        android:layout_margin="8dp"
-        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>
+        android:layout_margin="8dp">
 
-    <ImageButton
-        android:id="@+id/button_close"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_margin="8dp"
-        android:background="?selectableItemBackgroundBorderless"
-        android:src="@drawable/ic_close" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="8dp">
+
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/checkbox"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_margin="8dp"/>
+
+            <TextView
+                android:id="@+id/text_item"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Item"
+                android:layout_gravity="top"
+                android:layout_margin="8dp"
+                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>
+
+            <ImageButton
+                android:id="@+id/button_close"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_margin="8dp"
+                android:background="?selectableItemBackgroundBorderless"
+                android:src="@drawable/ic_close" />
+
+        </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 </LinearLayout>
