--- a/app/src/main/res/layout/adapter_week.xml
+++ b/app/src/main/res/layout/adapter_week.xml
@@ -66,7 +66,8 @@
                         android:layout_height="24dp"
                         android:layout_margin="4dp"
                         android:background="?selectableItemBackgroundBorderless"
-                        android:src="@drawable/ic_groceries" />
+                        android:src="@drawable/ic_groceries"
+                        android:visibility="gone"/>
 
                     <ImageButton
                         android:id="@+id/button_add_monday"
@@ -74,7 +75,8 @@
                         android:layout_height="24dp"
                         android:layout_margin="4dp"
                         android:background="?selectableItemBackgroundBorderless"
-                        android:src="@drawable/ic_add" />
+                        android:src="@drawable/ic_add"
+                        android:visibility="gone"/>
 
                 </LinearLayout>
 
@@ -136,7 +138,8 @@
                     android:layout_height="24dp"
                     android:layout_margin="4dp"
                     android:background="?selectableItemBackgroundBorderless"
-                    android:src="@drawable/ic_groceries" />
+                    android:src="@drawable/ic_groceries"
+                    android:visibility="gone"/>
 
                 <ImageButton
                     android:id="@+id/button_add_tuesday"
@@ -144,7 +147,8 @@
                     android:layout_height="24dp"
                     android:layout_margin="4dp"
                     android:background="?selectableItemBackgroundBorderless"
-                    android:src="@drawable/ic_add" />
+                    android:src="@drawable/ic_add"
+                    android:visibility="gone"/>
 
             </LinearLayout>
 
@@ -214,7 +218,8 @@
                         android:layout_height="24dp"
                         android:layout_margin="4dp"
                         android:background="?selectableItemBackgroundBorderless"
-                        android:src="@drawable/ic_groceries" />
+                        android:src="@drawable/ic_groceries"
+                        android:visibility="gone"/>
 
                     <ImageButton
                         android:id="@+id/button_add_wednesday"
@@ -222,7 +227,8 @@
                         android:layout_height="24dp"
                         android:layout_margin="4dp"
                         android:background="?selectableItemBackgroundBorderless"
-                        android:src="@drawable/ic_add" />
+                        android:src="@drawable/ic_add"
+                        android:visibility="gone"/>
 
                 </LinearLayout>
 
@@ -286,7 +292,8 @@
                         android:layout_height="24dp"
                         android:layout_margin="4dp"
                         android:background="?selectableItemBackgroundBorderless"
-                        android:src="@drawable/ic_groceries" />
+                        android:src="@drawable/ic_groceries"
+                        android:visibility="gone"/>
 
                     <ImageButton
                         android:id="@+id/button_add_thursday"
@@ -294,7 +301,8 @@
                         android:layout_height="24dp"
                         android:layout_margin="4dp"
                         android:background="?selectableItemBackgroundBorderless"
-                        android:src="@drawable/ic_add" />
+                        android:src="@drawable/ic_add"
+                        android:visibility="gone"/>
 
                 </LinearLayout>
 
@@ -363,7 +371,8 @@
                     android:layout_height="24dp"
                     android:layout_margin="4dp"
                     android:background="?selectableItemBackgroundBorderless"
-                    android:src="@drawable/ic_groceries" />
+                    android:src="@drawable/ic_groceries"
+                    android:visibility="gone"/>
 
                 <ImageButton
                     android:id="@+id/button_add_friday"
@@ -371,7 +380,8 @@
                     android:layout_height="24dp"
                     android:layout_margin="4dp"
                     android:background="?selectableItemBackgroundBorderless"
-                    android:src="@drawable/ic_add" />
+                    android:src="@drawable/ic_add"
+                    android:visibility="gone"/>
 
             </LinearLayout>
 
@@ -434,7 +444,8 @@
                         android:layout_height="24dp"
                         android:layout_margin="4dp"
                         android:background="?selectableItemBackgroundBorderless"
-                        android:src="@drawable/ic_groceries" />
+                        android:src="@drawable/ic_groceries"
+                        android:visibility="gone"/>
 
                     <ImageButton
                         android:id="@+id/button_add_saturday"
@@ -442,7 +453,8 @@
                         android:layout_height="24dp"
                         android:layout_margin="4dp"
                         android:background="?selectableItemBackgroundBorderless"
-                        android:src="@drawable/ic_add" />
+                        android:src="@drawable/ic_add"
+                        android:visibility="gone"/>
 
                 </LinearLayout>
 
@@ -512,7 +524,8 @@
                         android:layout_height="24dp"
                         android:layout_margin="4dp"
                         android:background="?selectableItemBackgroundBorderless"
-                        android:src="@drawable/ic_groceries" />
+                        android:src="@drawable/ic_groceries"
+                        android:visibility="gone"/>
 
                     <ImageButton
                         android:id="@+id/button_add_sunday"
@@ -520,7 +533,8 @@
                         android:layout_height="24dp"
                         android:layout_margin="4dp"
                         android:background="?selectableItemBackgroundBorderless"
-                        android:src="@drawable/ic_add" />
+                        android:src="@drawable/ic_add"
+                        android:visibility="gone"/>
 
                 </LinearLayout>
 
