improving fragments and bottom navigation

--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.RecipeFragment">
+    tools:context=".fragments.RecipeFragment"
+    android:background="?colorSurface">
 
     <!-- NestedScrollingChild goes here (NestedScrollView, RecyclerView, etc.). -->
 
@@ -29,7 +30,7 @@
                 android:scrollbars="none" >
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingStart="12dp"
                     android:paddingEnd="12dp">
